objects/OrderProcessingRule__mdt/OrderProcessingRule__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata is used to store Order and its related tasks and goals to update through Entire Order Life Cycle</description>
    <label>Order Processing Rules</label>
    <pluralLabel>Order Processing Rules</pluralLabel>
</CustomObject>