objects/OrderProcessingRule__mdt/fields/APINamesOfChangedFieldsToRunLogic__c.field-meta.xml
<CustomField>
    <fullName>APINamesOfChangedFieldsToRunLogic__c</fullName>
    <label>API Names of Changed Fields To Run Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>