objects/OrderProcessingRule__mdt/fields/CarePlanConditionsInfo__c.field-meta.xml
<CustomField>
    <fullName>CarePlanConditionsInfo__c</fullName>
    <label>Care Plan Conditions Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>