objects/OrderProcessingRule__mdt/fields/CarePlanUpdateInfo__c.field-meta.xml
<CustomField>
    <fullName>CarePlanUpdateInfo__c</fullName>
    <label>Care Plan Update Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>