objects/OrderProcessingRule__mdt/fields/CryoType__c.field-meta.xml
<CustomField>
    <fullName>CryoType__c</fullName>
    <label>Cryo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party</fullName>
                <default>true</default>
                <label>3rd Party</label>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Raritan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>