objects/OrderProcessingRule__mdt/fields/GoalsConditionsInfo__c.field-meta.xml
<CustomField>
    <fullName>GoalsConditionsInfo__c</fullName>
    <description>This field is used to store prerequisite conditions for order update to check along with order record</description>
    <label>Goals Conditions Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>