objects/OrderProcessingRule__mdt/fields/GoalsUpdateInfo__c.field-meta.xml
<CustomField>
    <fullName>GoalsUpdateInfo__c</fullName>
    <label>Goals Update Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>