objects/OrderProcessingRule__mdt/fields/OrderConditionsInfo__c.field-meta.xml
<CustomField>
    <fullName>OrderConditionsInfo__c</fullName>
    <description>Please provide Conditions in JSON format .
For or conditions provide comma separated list  against field name</description>
    <label>Order Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>