objects/OrderProcessingRule__mdt/fields/OrderUpdateInfo__c.field-meta.xml
<CustomField>
    <fullName>OrderUpdateInfo__c</fullName>
    <label>Order Update Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>