objects/OrderProcessingRule__mdt/fields/RuleOrder__c.field-meta.xml
<CustomField>
    <fullName>RuleOrder__c</fullName>
    <label>Rule Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>