objects/OrderProcessingRule__mdt/fields/TaskConditionsInfo__c.field-meta.xml
<CustomField>
    <fullName>TaskConditionsInfo__c</fullName>
    <description>This field stores the prerequisite conditions for order update</description>
    <label>Task Conditions Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>