objects/OrderProcessingRule__mdt/fields/TaskUpdateInfo__c.field-meta.xml
<CustomField>
    <fullName>TaskUpdateInfo__c</fullName>
    <label>Task Update Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>