objects/OrderProcessingRule__mdt/listViews/All_Records_Fields.listView-meta.xml
<ListView>
    <fullName>All_Records_Fields</fullName>
    <columns>RuleOrder__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>APINamesOfChangedFieldsToRunLogic__c</columns>
    <columns>CarePlanConditionsInfo__c</columns>
    <columns>CarePlanUpdateInfo__c</columns>
    <columns>GoalsConditionsInfo__c</columns>
    <columns>TaskConditionsInfo__c</columns>
    <columns>CryoType__c</columns>
    <columns>GoalsUpdateInfo__c</columns>
    <columns>IsActive__c</columns>
    <columns>OrderConditionsInfo__c</columns>
    <columns>OrderUpdateInfo__c</columns>
    <columns>TaskUpdateInfo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records &amp; Fields</label>
    <language>en_US</language>
</ListView>